# medallion-crypto

./: .gitignore  BEFORE_AFTER.md  CONCEPT_GUIDE.md  GROK_REBUTTAL.md  MEDALLION_PROOF.md  PROOF_OF_PERFORMANCE.md  README.md  TOPOOMEGA_README.md  TRAINING_STATUS.md  auto_train.sh  dashboard.py  launch.sh  main.py  prepare_aws_package.sh  requirements.txt  run_overnight.sh  test_production.py  topo_dashboard.py  topo_launch.sh  topo_omega_main.py  train_full_pipeline.py  train_real_207k.py
results/: backtest_metrics.json  baseline_metrics.json  optimized_model_metrics.json  xgboost_207k_backtest.json  xgboost_backtest.json
src/: config.py
src/alpha/: signal_engine.py  topo_signal_engine.py
src/backtest/: backtest_xgboost.py  backtester.py
src/core/: engine.py  logger.py  monitor.py  topo_omega_engine.py
src/data/: fast_topology_dataset.py  feed.py  generate_production_topology.py  historical_fetcher.py  numba_topology_dataset.py  professional_free_fetcher.py  topology_dataset_generator.py
src/execution/: bridge.py  router.py
src/execution/rust_daemon/: Cargo.toml
src/execution/rust_daemon/src/: main.rs
src/forecasting/: topo_transformer.py  topology_forecaster.py
src/fusion/: onchain_graph.py
src/models/: baseline_rf.pkl  xgboost_optimized.pkl
src/risk/: nuclear_controls.py  nuclear_system.py  optimize.py  sizing.py
src/rl/: continuous_ppo.py  ppo_agent.py  trading_env.py  train.py  wasserstein_ppo.py
src/topology/: bifiltration.py  integrator.py  persistence_core.py
tests/: test_live.py  test_signal.py  test_topoomega.py
(+18 files in other folders)
