[package]
name = "topo_execution_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tungstenite = { version = "0.21", features = ["rustls-tls"] }
url = "2.5"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
pyo3 = { version = "0.20", features = ["extension-module"] }
dashmap = "5.5" # Concurrent hashmap for order book

[lib]
name = "topo_execution"
crate-type = ["cdylib"]

[[bin]]
name = "daemon"
path = "src/main.rs"
